--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1654,3 +1654,49 @@ section,
 .starter-section {
   /* Add your styles here */
 }
+
+
+/*--------------------------------------------------------------
+# Youtube video embed
+--------------------------------------------------------------*/
+.video-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%; /* Aspect ratio: 16:9 */
+  height: 0;
+  overflow: hidden;
+}
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
+/*--------------------------------------------------------------
+# gallery section
+--------------------------------------------------------------*/
+.gallery-img {
+  width: 100%;
+  height: 250px; /* Adjust height as needed */
+  object-fit: cover;
+  border-radius: 10px; /* Optional rounded corners */
+  padding: 5px;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.member-img img {
+  width: 100%; /* Make images responsive */
+  height: 300px; /* Set a consistent height */
+  object-fit: cover; /* Prevents image distortion */
+  border-radius: 10px; /* Optional: Adds rounded corners */
+}
